--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,23 @@ node_modules/
 .expo/
 .expo-shared/
 dist/
-build/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+
+# macOS
 .DS_Store
-*.expo
+
+# IDE
+.vscode/
+.idea/
+
+# Environment
+.env
+.env.local
+
